--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.4.0"
+        "@fortawesome/fontawesome-free": "^6.4.0",
+        "clipboard": "^2.0.11"
     }
 }
