--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
         "clipboard": "^2.0.11",
+        "cookieconsent": "^3.1.1",
         "symfony": "^0.0.1"
     }
 }
