dockerfile fixes, version with persistent DB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 
 services:
-###> doctrine/doctrine-bundle ###
   web:
     build:
       context: .
+      dockerfile: Dockerfile
     ports:
       - '8080:80'
     volumes:
@@ -12,11 +12,12 @@ services:
       - db_data:/var/www/html/var:cached
     environment:
       - DATABASE_URL=sqlite:////var/www/html/var/data.db
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+
+  database:
+    image: sqlite
+    restart: always
+    volumes:
+      - db_data:/var/lib/sqlite/data
 
 volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
+  db_data:
