--- a/DockerFile
+++ b/DockerFile
@@ -1,30 +1,48 @@
-FROM nginx
+FROM php:8.1-fpm-alpine
 
 # Install PHP and other dependencies
-RUN apt-get update && apt-get install -y \
-    php \
-    php-fpm \
-    php-pdo \
-    php-sqlite3 \
-    php-mbstring \
-    supervisor
+RUN apk add --no-cache curl \
+    bash \
+    git \
+    npm \
+    sqlite 
+
+
+# Install Composer
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
+    && php composer-setup.php --filename=composer --install-dir=/usr/local/bin \
+    && php -r "unlink('composer-setup.php');"
+
+# Install Symfony CLI
+RUN curl -sS https://get.symfony.com/cli/installer | bash \
+    && mv /root/.symfony5/bin/symfony /usr/local/bin/symfony \
+    && rm -rf /root/.symfony
+
 
 # Copy the Symfony application code to the container
-COPY . /var/www/html
+COPY --chown=www-data:www-data . /var/www/
 
-# Configure Nginx
-RUN rm /etc/nginx/conf.d/default.conf
-COPY docker/nginx.conf /etc/nginx/conf.d/
+# RUN mkdir -p /var/www/var/cache/dev               #no need wegen dem --chown=www-data:www-data
+# RUN chmod 777 -R /var/www/var/cache/dev           #no need wegen dem --chown=www-data:www-data
+# RUN mkdir -p /var/www/var/log                     #no need wegen dem --chown=www-data:www-data
+# RUN chmod 777 -R /var/www/var/log                 #no need wegen dem --chown=www-data:www-data
 
-# Configure PHP-FPM
-COPY docker/fpm-pool.conf /etc/php/7.4/fpm/pool.d/
-COPY docker/php.ini /etc/php/7.4/fpm/
 
-# Configure Supervisor
-COPY docker/supervisord.conf /etc/supervisor/conf.d/
+# Set working directory
+WORKDIR /var/www/
 
-# Expose ports 80 (HTTP) and 443 (HTTPS) to the host machine
-EXPOSE 80 443
+RUN composer install 
+RUN npm install
 
-# Start Supervisor
-CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+# create fresh DB // 
+# RUN mkdir /var/www/migrations                    
+# RUN php bin/console make:migration
+# RUN php bin/console doctrine:migrations:migrate --no-interaction
+# RUN chmod 666  /var/www/var/data.db
+
+
+
+
+EXPOSE 8000
+
+CMD ["symfony", "server:start"]
