--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fortawesome/fontawesome-free": "^6.4.0",
         "clipboard": "^2.0.11",
         "cookieconsent": "^3.1.1",
+        "seedrandom": "^3.0.5",
         "symfony": "^0.0.1"
     }
 }
